test/expected/declare_af.out
declare f as function returning auto
                                    ^
37: syntax error: "\n": English expected after "returning"
